# NumericalAnalysis

./: .gitignore  CMakeLists.txt  README.md  calculus.h  equation.h  interpolation.h  main.cpp  matrix.h
example/: test_equation.cpp  test_matrix.cpp
include/: calculus.h  common_def.h  equation.h  interpolation.h  matrix.h
test/: test.h  test_equation.cpp  test_interpolation.cpp  test_matrix.cpp
